--- a/index.html
+++ b/index.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <nav>medellin</nav>
+    <nav>
+        <h1 class="titulo1">MEDELLIN</h1>
+        <H2>ETERNA PRIMAVERA</H2>
 
+    </nav
+    ><br><br><br>
 
-    <main></main>
-    <footer></footer>
+    <main>
+        <h1>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus accusamus laboriosam cum minima possimus, sapiente nam similique asperiores! Saepe, laboriosam!
+        </h1>
+
+        <h3>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, animi doloremque quae expedita repellendus ipsa sapiente, impedit possimus ea at recusandae. Pariatur, provident tempora dolor voluptatum iste quis. Voluptatum, vitae? Blanditiis autem necessitatibus inventore maxime. Maiores reiciendis fugiat molestias expedita vitae, provident cum veritatis, impedit error harum esse fuga voluptate!
+        </h3>
+    </main>
+<br><br><br>
+
+    <footer>
+        <h1>correo</h1>
+        <h1>direccion</h1>
+        <h1>redes</h1>
+    </footer>
 </body>
 </html>
