comienzan los enlaces

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <h3>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, animi doloremque quae expedita repellendus ipsa sapiente, impedit possimus ea at recusandae. Pariatur, provident tempora dolor voluptatum iste quis. Voluptatum, vitae? Blanditiis autem necessitatibus inventore maxime. Maiores reiciendis fugiat molestias expedita vitae, provident cum veritatis, impedit error harum esse fuga voluptate!
         </h3>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quidem odio doloremque voluptates distinctio amet provident, qui laborum consequatur dolorum.</p>
+
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae, sint aspernatur! Corporis vitae totam consequatur in architecto rem, laboriosam quam.
+        </p>
+        
     </main>
 <br><br><br>
 
